tests/baselines/reference/functionOverloads16.errors.txt
==== tests/cases/compiler/functionOverloads16.ts (1 errors) ====
    function foo(foo:{a:string;}):string;
    function foo(foo:{a:string;}):number;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! functionOverloads16.ts(2,1): error TS2175: Overloads cannot differ only by return type.
    function foo(foo:{a:string; b?:number;}):any { return "" }
    